--- a/_dashboard/DotNetPerfMonitor/assets/css/global.css
+++ b/_dashboard/DotNetPerfMonitor/assets/css/global.css
@@ -1,3 +1,5 @@
+
+@import url('https://fonts.googleapis.com/css?family=Exo+2&display=swap');
 body {
-    font-family: 'Releway', sans-serif;
+    font-family: 'Exo 2', sans-serif;
 }
