--- a/_dashboard/DotNetPerfMonitor/assets/css/global.css
+++ b/_dashboard/DotNetPerfMonitor/assets/css/global.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css?family=Exo+2&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Exo&display=swap');
 body {
-    font-family: 'Exo 2', sans-serif;
-}
+    font-family: 'Exo', sans-serif;
+}   
